# lib_subsys

./: CMakeLists.txt  conanfile.py
include/: lib_subsys.h
src/: lib_subsys.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
